Sat Oct 26 11:30:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): do gc_rest_sweep() before GC.
	  gc_rest_sweep() can reduce malloc_increase, so try it before GC.
	  Otherwise, malloc_increase can be less than malloc_limit at
	  gc_before_sweep(). This means that re-calculation of malloc_limit
	  may be wrong value.

Sat Oct 26 06:35:41 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_before_heap_sweep): Restructure code to mean clearly.
	  heap->freelist is connected to end of list.

Sat Oct 26 04:01:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_heap_sweep): fix freelist management.
	  After rb_gc_force_recycle() for a object blonging to heap->freelist,
	  `heap->using_page->freelist' is not null.

Thu Oct 24 21:57:24 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* parse.y: Remove +(binary) and -(binary) special cases
	  [Feature #9048]

Thu Oct 24 12:45:53 2013  Zachary Scott  <e@zzak.io>

	* object.c: [DOC] Document first argument also takes string for:

	  rb_mod_const_get, rb_mod_const_set, rb_mod_const_defined

	  Also added note about NameError exception for invalid constant name

Thu Oct 24 12:23:58 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_terminate_all): add a comment why we need
	  state check and call terminate_i again.

Thu Oct 24 12:15:02 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_terminate_all): add a comment why infinite
	  sleep is safe.

Thu Oct 24 07:41:42 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: add new initial_growth_max tuning parameter.
	  [ruby-core:57928] [Bug #9035]
	* gc.c (heap_set_increment): when initial_growth_max is set,
	  do not grow number of slots by more than growth_max at a time.
	* gc.c (rb_gc_set_params): load optional new tuning value from
	  RUBY_HEAP_SLOTS_GROWTH_MAX environment variable.
	* test/ruby/test_gc.rb (class TestGc): test for above.
